# VirtualDubPipeFilter

./: CMakeLists.txt  README.md  build.cmd  qtgmc.avs  qtgmc_pipe.bat
src/: PipeFilter.cpp  PipeFilter.h  PipeFilter.rc  main.cpp  resource.h
